cap nhap giao dien admin update

--- a/Ung_dung_Khach_hang/Giao_dien/MH_Chinh.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Chinh.html
@@ -93,10 +93,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="btn">
 									<select class="btn btn-outline-danger" onchange="Xuat_Sach_theo_Don_gia(this.value)">
-										<option value="0-50000000">Lọc Điện thoại theo Đơn giá Bán</option>
-										<option value="0-200000">Đơn giá Bán dưới 2 triệu </option>
-										<option value="200000-400000">Đơn giá Bán lớn 2 triệu và nhỏ 4 triệu </option>
-										<option value="400000-900000">Đơn giá Bán lớn 4 triệu </option>
+										<option value="0-900000">Lọc Sách theo Đơn giá Bán</option>
+										<option value="0-200000">Giá dưới 200.000</option>
+										<option value="200000-400000">Giá lớn từ 200.000 đến 400.000</option>
+										<option value="400000-900000">Giá từ 400.000 đến 900.000</option>
 									</select>
 								</div>
 								<button type="button" class="btn btn-outline" id="Th_Tang" onclick="Sap_Tang()">
