--- a/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Sach_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Sach_Admin.html
@@ -151,22 +151,22 @@
             Hien_thi_Trang(trang)
         }
         Th_Them.onclick = () => {
-            var trang = "MH_Them_Sach.html"
+            var trang = "MH_Them_Sach_Admin.html"
             Hien_thi_Trang(trang)
 
         }
         Th_Sua.onclick = () => {
-            var trang = "MH_Sua_Sach.html"
+            var trang = "MH_Sua_Sach_Admin.html"
             XL_Danh_sach_Chon(trang)
         }
 
         Th_Xoa.onclick = () => {
-            var trang = "MH_Xoa_Sach.html"
+            var trang = "MH_Xoa_Sach_Admin.html"
             XL_Danh_sach_Chon(trang)
         }
 
         Th_Phuc_hoi.onclick = () => {
-            var trang = "MH_Phuc_hoi_Sach.html"
+            var trang = "MH_Phuc_hoi_Sach_Admin.html"
             Hien_thi_Trang(trang)
         }
 
