--- a/Ung_dung_Quan_ly/Giao_dien/MH_Them_Tac_gia_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Them_Tac_gia_Admin.html
@@ -1,5 +1,4 @@
-html lang="en">
-
+<html lang="en">
 <head>
     <title>Sách</title>
     <meta charset="utf-8">
@@ -27,7 +26,7 @@ html lang="en">
             THÊM TÁC GIẢ
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row" id="Th_Cha"></div>
     </div>
     <!-- Optional JavaScript -->
