--- a/Ung_dung_Quan_ly/MH_Old/MH_Phuc_hoi_Sach.html
+++ b/Ung_dung_Quan_ly/MH_Old/MH_Phuc_hoi_Sach.html
@@ -5,9 +5,10 @@
     <title>Sách</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
-    <link rel="stylesheet" href="css/my_custom.css">
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+  <link rel="stylesheet" href="css/my_custom.css">
 </head>
 
 <body>
@@ -24,51 +25,51 @@
 
     <div class="container">
         <div class="alert alert-success text-center book-mt10" id="Th_Thong_bao">
-            XOÁ TÁC GIẢ
+            PHỤC HỒI SÁCH
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row" id="Th_Cha">
 
         </div>
     </div>
+
     <!-- Optional JavaScript -->
     <script src="../Xu_ly/Xu_ly_3L.js"></script>
     <script>
-        Danh_sach_Cap_nhat = JSON.parse(sessionStorage.getItem("Danh_sach_Chon"))
-        //console.log(Danh_sach_Cap_nhat)
-        Tao_The_hien_Xoa_Tac_gia(Th_Cha, Danh_sach_Cap_nhat)
+        var Du_lieu = Doc_Danh_sach_Xoa_Sach();
+        var Danh_sach_Xoa_Sach = Du_lieu.Danh_sach_Xoa_Sach
+        Tao_The_hien_Phuc_hoi_Sach(Th_Cha, Danh_sach_Xoa_Sach)
 
-        function XL_Xoa_Tac_gia() {
-            var Danh_sach_Cap_nhat = document.querySelectorAll(".CAP_NHAP")
-
+        function XL_Phuc_hoi_Sach() {
+            var Danh_sach_Phuc_hoi = document.querySelectorAll(".PHUC_HOI")
             var Danh_sach = []
-            Danh_sach_Cap_nhat.forEach(Tac_gia => {
-
-                var Ma_so = Tac_gia.getAttribute("Ma_so")
-                var Tac_gia_Xoa = {
-                    "Ma_so": Ma_so,
+            Danh_sach_Phuc_hoi.forEach(Sach => {
+                if (Sach.checked) {
+                    var Ma_so = Sach.getAttribute("Ma_so")
+                    var Sach_Phuc_hoi = {
+                        "Ma_so": Ma_so,
+                    }
+                    Danh_sach.push(Sach_Phuc_hoi)
                 }
-                Danh_sach.push(Tac_gia_Xoa)
             })
 
-            var Kq = Ghi_Xoa_Tac_gia(Danh_sach)
+            var Kq = Ghi_Phuc_hoi_Sach(Danh_sach)
             return Kq
         }
 
         Th_Dong_y.onclick = () => {
-            var Kq = XL_Xoa_Tac_gia()
-            //console.log(Kq)
+            var Kq = XL_Phuc_hoi_Sach()
             if (Kq == "OK") {
-                Th_Thong_bao.innerHTML = "Xóa thành công Tác giả";
+                Th_Thong_bao.innerHTML = "Phục hồi thành công Sách";
                 sessionStorage.removeItem("Danh_sach_Chon")
             }
         }
 
         Th_Bo_qua.onclick = () => {
-            sessionStorage.removeItem("Danh_sach_Chon")
-            window.location = "MH_Danh_sach_Tac_gia_Admin.html"
+            window.location = "MH_Danh_sach_Sach_Admin.html"
         }
+
     </script>
 </body>
 
