--- a/Ung_dung_Quan_ly/MH_Old/MH_Xoa_Sach.html
+++ b/Ung_dung_Quan_ly/MH_Old/MH_Xoa_Sach.html
@@ -5,9 +5,10 @@
     <title>Sách</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
-    <link rel="stylesheet" href="css/my_custom.css">
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+  <link rel="stylesheet" href="css/my_custom.css">
 </head>
 
 <body>
@@ -24,52 +25,49 @@
 
     <div class="container">
         <div class="alert alert-success text-center book-mt10" id="Th_Thong_bao">
-            XOÁ TÁC GIẢ
+            XOÁ SÁCH
         </div>
     </div>
+
     <div class="container">
         <div class="row" id="Th_Cha">
 
         </div>
     </div>
     <!-- Optional JavaScript -->
+
     <script src="../Xu_ly/Xu_ly_3L.js"></script>
     <script>
         Danh_sach_Cap_nhat = JSON.parse(sessionStorage.getItem("Danh_sach_Chon"))
-        //console.log(Danh_sach_Cap_nhat)
-        Tao_The_hien_Xoa_Tac_gia(Th_Cha, Danh_sach_Cap_nhat)
-
-        function XL_Xoa_Tac_gia() {
+        Tao_The_hien_Xoa_Sach(Th_Cha, Danh_sach_Cap_nhat)
+        function XL_Xoa_Sach() {
             var Danh_sach_Cap_nhat = document.querySelectorAll(".CAP_NHAP")
-
             var Danh_sach = []
-            Danh_sach_Cap_nhat.forEach(Tac_gia => {
-
-                var Ma_so = Tac_gia.getAttribute("Ma_so")
-                var Tac_gia_Xoa = {
+            Danh_sach_Cap_nhat.forEach(Sach => {
+                var Ma_so = Sach.getAttribute("Ma_so")
+                var Sach_Xoa = {
                     "Ma_so": Ma_so,
                 }
-                Danh_sach.push(Tac_gia_Xoa)
+                Danh_sach.push(Sach_Xoa)
             })
-
-            var Kq = Ghi_Xoa_Tac_gia(Danh_sach)
-            return Kq
+            var Kq = Ghi_Xoa_Sach(Danh_sach)
+            return Kq  
         }
 
         Th_Dong_y.onclick = () => {
-            var Kq = XL_Xoa_Tac_gia()
+            var Kq = XL_Xoa_Sach()
             //console.log(Kq)
             if (Kq == "OK") {
-                Th_Thong_bao.innerHTML = "Xóa thành công Tác giả";
+                Th_Thong_bao.innerHTML = "Xóa thành công Sách";
                 sessionStorage.removeItem("Danh_sach_Chon")
             }
         }
 
         Th_Bo_qua.onclick = () => {
             sessionStorage.removeItem("Danh_sach_Chon")
-            window.location = "MH_Danh_sach_Tac_gia_Admin.html"
+            window.location = "MH_Danh_sach_Sach_Admin.html"
         }
+
     </script>
 </body>
-
 </html>
