--- a/Ung_dung_Khach_hang/Giao_dien/MH_Lien_he.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Lien_he.html
@@ -19,36 +19,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 
 <body>
-	<!-- header -->
-	<div class="header" id="home">
-		<div class="container">
-			<ul>
-				<li>
-					<a href="#" data-toggle="modal" data-target="#myModal">
-						<i class="fa fa-unlock-alt" aria-hidden="true"></i> Sign In </a>
-				</li>
-				<li>
-					<a href="#" data-toggle="modal" data-target="#myModal2">
-						<i class="fa fa-pencil-square-o" aria-hidden="true"></i> Sign Up </a>
-				</li>
-				<li>
-					<i class="fa fa-phone" aria-hidden="true"></i> Call : 01234567898</li>
-				<li>
-					<i class="fa fa-envelope-o" aria-hidden="true"></i>
-					<a href="mailto:info@example.com">info@example.com</a>
-				</li>
-			</ul>
-		</div>
-	</div>
 	<!-- header-bot -->
 	<div class="header-bot">
 		<div class="header-bot_inner_wthreeinfo_header_mid">
 			<!-- header-bot -->
 			<div class="col-md-4 logo_agile">
 				<h1>
-					<a href="index.html">
+					<a href="MH_Chinh.html">
 						<span>TP</span>BookStore
-						<i class="fa fa-shopping-bag top_logo_agile_bag" aria-hidden="true"></i>
 					</a>
 				</h1>
 			</div>
@@ -77,7 +55,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav menu__list">
 								<li class="active menu__item menu__item--current">
-									<a class="menu__link" href="index.html">Home
+									<a class="menu__link" href="MH_Chinh.html">Trang chủ
 										<span class="sr-only">(current)</span>
 									</a>
 								</li>
@@ -101,20 +79,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="page-head_agile_info_w3l">
 		<div class="container">
 			<h3>LIÊN HỆ MUA SÁCH</h3>
-			<!--/w3_short-->
-			<div class="services-breadcrumb">
-				<div class="agile_inner_breadcrumb">
-
-					<ul class="w3_short">
-						<li>
-							<a href="MH_Chinh.html">Trang chủ</a>
-							<i>|</i>
-						</li>
-						<li>Liên hệ</li>
-					</ul>
-				</div>
-			</div>
-			<!--//w3_short-->
 		</div>
 	</div>
 	<!--/contact-->
@@ -251,7 +215,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<i class="fa fa-truck" aria-hidden="true"></i>
 					</div>
 					<div class="w3layouts_mail_grid_left2">
-						<h3>MIỄN GIAO HÀNG</h3>
+						<h3>MIỄN PHÍ GIAO HÀNG</h3>
 						<p>Dành cho đơn hàng từ 99.000đ</p>
 					</div>
 				</div>
