xong xu ly gui Mail

--- a/Ung_dung_Khach_hang/Giao_dien/MH_Lien_he.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Lien_he.html
@@ -115,7 +115,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 					</div>
 					<div class="col-md-6 contact-form">
-						<!-- <h4 class="white-w3ls">LIÊN HỆ CHÚNG TÔI</span>
+						<h4 class="white-w3ls">LIÊN HỆ CHÚNG TÔI</span>
 						</h4>
 						<form>
 							<div class="styled-input agile-styled-input-top">
@@ -139,11 +139,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<span></span>
 							</div>
 							<input type="submit" value="GỬI" id="Th_Dong_y">
-						</form> -->
+						</form>
 
 
 
-						<div class="container">
+						<!-- <div class="container">
 							<div class="row">
 								<div class="btn btn-outline-danger btn-block" id="Th_Thong_bao">
 									LIÊN HỆ VỚI CHÚNG TÔI
@@ -188,7 +188,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 
 
 
@@ -409,6 +409,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- for bootstrap working -->
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script src="../ckeditor/ckeditor.js"></script>
+	<script src="../Xu_ly/Xu_ly_3L.js"></script>
 	<script>
 			CKEDITOR.replace('Th_Noi_dung', {
 				customConfig: 'lien_he.js'
