--- a/Ung_dung_Khach_hang/Giao_dien/MH_Chinh.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Chinh.html
@@ -61,8 +61,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</button>
 				</div>
 				<div class="row book-category">
-					<div class="col-md-4">
-						<span>Thể loại</span>
+						<div class="col-md-3 col-xs-12 book-mt7">
+								<span id="Th_Trang_chu" class="btn"><i class="fa fa-book" aria-hidden="true"></i> Tất Cả Sách</span>
+							</div>
+					<div class="col-md-3 col-xs-12 book-mt15">
+						<span><i class="fa fa-list-alt" aria-hidden="true"></i> Thể loại</span>
 						<select class="btn btn-success" onclick="Xuat_Sach_theo_The_loai(this.value)">
 							<option value="khoahoc">Khoa học</option>
 							<option value="thethao">Thể thao</option>
@@ -71,8 +74,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<option value="vanhoc">Văn học</option>
 						</select>
 					</div>
-					<div class="col-md-4">
-						<span>Tác giả</span>
+					<div class="col-md-3 col-xs-12 book-mt15">
+						<span><i class="fa fa-user" aria-hidden="true"></i> Tác giả</span>
 						<select class="btn btn-warning" onclick="Xuat_Sach_theo_Tac_gia(this.value)">
 							<option value="ngoctrinh">Ngọc Trinh</option>
 							<option value="kimdung">Kim Dung</option>
@@ -81,8 +84,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<option value="quoctuan">Quốc Tuấn</option>
 						</select>
 					</div>
-					<div class="col-md-4">
-						<span>Nhà phát hành</span>
+					<div class="col-md-3 col-xs-12">
+						<span><i class="fa fa-address-book" aria-hidden="true"></i> Nhà phát hành</span>
 						<select class="btn btn-danger" onclick="Xuat_Sach_theo_NPH(this.value)">
 							<option value="kimdong">Kim Đồng</option>
 							<option value="nxbtre">Nhà Xuất Bản Trẻ</option>
