validate contact form

--- a/Ung_dung_Khach_hang/Giao_dien/MH_Gioi_thieu.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Gioi_thieu.html
@@ -19,7 +19,7 @@
 			<!-- header-bot -->
 			<div class="col-md-4 logo_agile">
 				<h1>
-					<a href="MH_Chinh.html">
+					<a href="MH_Index.html">
 						<span>TP</span>BookStore
 					</a>
 				</h1>
@@ -49,7 +49,7 @@
 						<div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav menu__list">
 								<li class="active menu__item menu__item--current">
-									<a class="menu__link" href="MH_Chinh.html">Trang chủ
+									<a class="menu__link" href="MH_Index.html">Trang chủ
 										<span class="sr-only">(current)</span>
 									</a>
 								</li>
@@ -168,7 +168,7 @@
 			<h6>Khuyến mãi lên đến 
 				<span>29%</span> giảm giá</h6>
 
-			<a class="hvr-outline-out button2" href="MH_Chinh.html">Xem và Mua sách</a>
+			<a class="hvr-outline-out button2" href="MH_Index.html">Xem và Mua sách</a>
 		</div>
 	</div>
 	<!-- //we-offer -->
@@ -223,7 +223,7 @@
 		<div class="footer_agile_inner_info_w3l">
 			<div class="col-md-3 footer-left">
 				<h2>
-					<a href="MH_Chinh.html">
+					<a href="MH_Index.html">
 						<span>TP</span>BOOKSTORE </a>
 				</h2>
 				<p>Công ty Cổ phần văn hóa Nhân Văn là đơn vị kinh doanh đã nhiều năm trong lĩnh vực xuất bản, in và phát hành. Từ năm 1991,
@@ -278,7 +278,7 @@
 						<h4>VỀ CHÚNG TÔI</h4>
 						<ul>
 							<li>
-								<a href="MH_Chinh.html">Trang chủ</a>
+								<a href="MH_Index.html">Trang chủ</a>
 							</li>
 							<li>
 								<a href="MH_Gioi_thieu.html">Giới thiệu</a>
