--- a/Ung_dung_Khach_hang/Giao_dien/MH_Index.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Index.html
@@ -26,7 +26,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-4 logo_agile">
 				<h1>
 					<a href="index.html">
-						<span>PT</span>BookStore</a>
+						<span>LIB</span>BookStore</a>
 				</h1>
 			</div>
 			<!-- header-bot -->
@@ -332,7 +332,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="footer_agile_inner_info_w3l">
 			<div class="col-md-3 footer-left">
 				<h2>
-					<a href="MH_Chinh.html">
+					<a href="MH_Index.html">
 						<span>TP</span>BOOKSTORE </a>
 				</h2>
 				<p>Công ty Cổ phần văn hóa Nhân Văn là đơn vị kinh doanh đã nhiều năm trong lĩnh vực xuất bản, in và phát hành. Từ năm 1991,
@@ -387,7 +387,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<h4>VỀ CHÚNG TÔI</h4>
 						<ul>
 							<li>
-								<a href="MH_Chinh.html">Trang chủ</a>
+								<a href="MH_Index.html">Trang chủ</a>
 							</li>
 							<li>
 								<a href="MH_Gioi_thieu.html">Giới thiệu</a>
