--- a/Ung_dung_Khach_hang/Giao_dien/MH_Lien_he.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Lien_he.html
@@ -9,7 +9,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <head>
 	<title>Liên hệ</title>
-	<!--/tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -25,7 +24,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!-- header-bot -->
 			<div class="col-md-4 logo_agile">
 				<h1>
-					<a href="MH_Chinh.html">
+					<a href="MH_Index.html">
 						<span>TP</span>BookStore
 					</a>
 				</h1>
@@ -55,7 +54,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav menu__list">
 								<li class="active menu__item menu__item--current">
-									<a class="menu__link" href="MH_Chinh.html">Trang chủ
+									<a class="menu__link" href="MH_Index.html">Trang chủ
 										<span class="sr-only">(current)</span>
 									</a>
 								</li>
@@ -117,24 +116,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-md-6 contact-form">
 						<h4 class="white-w3ls">LIÊN HỆ CHÚNG TÔI</span>
 						</h4>
-						<form>
+						<form name="myForm" onsubmit="return(validate());">
 							<div class="styled-input agile-styled-input-top">
-									<input type="text" class="form-control" id="Th_Ho_ten" required="">
+								<input type="text" class="form-control" id="Th_Ho_ten" name="name">
+								<div id="Th_Validate1"></div>
 								<label>Tên</label>
 								<span></span>
 							</div>
 							<div class="styled-input">
-									<input type="text" class="form-control" id="Th_Email" required="">
+								<input type="text" class="form-control" id="Th_Email" name="email">
+								<div id="Th_Validate2"></div>
 								<label>Email</label>
 								<span></span>
 							</div>
 							<div class="styled-input">
-									<input type="text" class="form-control" id="Th_Tieu_de" required="">
+								<input type="text" class="form-control" id="Th_Tieu_de" name="title">
+								<div id="Th_Validate3"></div>
 								<label>Tiêu đề</label>
 								<span></span>
 							</div>
 							<div class="styled-input">
-								<textarea class="ckeditor" id="Th_Noi_dung"></textarea>
+								<textarea class="ckeditor" id="Th_Noi_dung" name="content"></textarea>
+								<div id="Th_Validate4"></div>
 								<label>Nội dung</label>
 								<span></span>
 							</div>
@@ -257,7 +260,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="footer_agile_inner_info_w3l">
 			<div class="col-md-3 footer-left">
 				<h2>
-					<a href="MH_Chinh.html">
+					<a href="MH_Index.html">
 						<span>TP</span>BOOKSTORE </a>
 				</h2>
 				<p>Công ty Cổ phần văn hóa Nhân Văn là đơn vị kinh doanh đã nhiều năm trong lĩnh vực xuất bản, in và phát hành. Từ năm 1991,
@@ -312,7 +315,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<h4>VỀ CHÚNG TÔI</h4>
 						<ul>
 							<li>
-								<a href="MH_Chinh.html">Trang chủ</a>
+								<a href="MH_Index.html">Trang chủ</a>
 							</li>
 							<li>
 								<a href="MH_Gioi_thieu.html">Giới thiệu</a>
@@ -411,22 +414,63 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="../ckeditor/ckeditor.js"></script>
 	<script src="../Xu_ly/Xu_ly_3L.js"></script>
 	<script>
-			CKEDITOR.replace('Th_Noi_dung', {
-				customConfig: 'lien_he.js'
-			});
-	
-			Th_Dong_y.onclick = () => {
-				var noi_dung = CKEDITOR.instances.Th_Noi_dung.getData();
-				var ho_ten=Th_Ho_ten.value
-				var email=Th_Email.value
-				var tieu_de=Th_Tieu_de.value
-				
-				var str=`Họ tên: ${ho_ten}<br>Email: ${email}<h3>${tieu_de}</h3>`
-				str+=`${noi_dung}`
-				var Kq=Khach_hang_lien_he(str)
-				console.log(Kq);	
+		CKEDITOR.replace('Th_Noi_dung', {
+			customConfig: 'lien_he.js'
+		});
+
+		Th_Dong_y.onclick = () => {
+			var noi_dung = CKEDITOR.instances.Th_Noi_dung.getData();
+			var ho_ten = Th_Ho_ten.value
+			var email = Th_Email.value
+			var tieu_de = Th_Tieu_de.value
+
+			var str = `Họ tên: ${ho_ten}<br>Email: ${email}<h3>${tieu_de}</h3>`
+			str += `${noi_dung}`
+			var Kq = Khach_hang_lien_he(str)
+			console.log(Kq);
+		}
+	</script>
+
+	<script>
+		function validate() {
+
+			if (document.myForm.name.value == "") {
+				Th_Validate1.innerHTML = "Vui lòng nhập tên của bạn";
+				document.myForm.name.focus();
+				return false;
+			} else if (document.myForm.email.value == "") {
+				Th_Validate2.innerHTML = "Vui lòng nhập email của bạn";
+				document.myForm.email.focus();
+				return false;
+				validateEmail();
+			} else if (document.myForm.title.value == "") {
+				Th_Validate3.innerHTML = "Vui lòng nhập tiêu đề";
+				document.myForm.title.focus();
+				return false;
+			} else if (document.myForm.content.value == "") {
+				Th_Validate4.innerHTML = "Vui lòng nhập nội dung";
+				document.myForm.content.focus();
+				return false;
+			} else {
+				return (true);
 			}
-		</script>
+		}
+
+
+		// VALIDATE EMAIL
+		function validateEmail() {
+			var emailID = document.myForm.email.value;
+			atpos = emailID.indexOf("@");
+			dotpos = emailID.lastIndexOf(".");
+
+			if (atpos < 1 || (dotpos - atpos < 2)) {
+				alert("Please enter correct email ID")
+				document.myForm.email.focus();
+				return false;
+			}
+			return (true);
+		}
+	</script>
 </body>
 
 </html>
