chinh lai mau sac client

--- a/Ung_dung_Khach_hang/Giao_dien/MH_Index.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Index.html
@@ -25,7 +25,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!-- header-bot -->
 			<div class="col-md-4 logo_agile">
 				<h1>
-					<a href="index.html">
+					<a href="MH_Index.html">
 						<span>LIB</span>BookStore</a>
 				</h1>
 			</div>
@@ -54,7 +54,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav menu__list">
 								<li class="active menu__item menu__item--current">
-									<a class="menu__link" href="index.html">Home
+									<a class="menu__link" href="MH_Index.html">Home
 										<span class="sr-only">(current)</span>
 									</a>
 								</li>
@@ -172,7 +172,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<i class="fa fa-search mr-3" id="Th_Tim"></i>
 					</div>
 					<div class="btn">
-						<select class="btn btn-success" onchange="Xuat_Sach_theo_Don_gia(this.value)">
+						<select class="book-select" onchange="Xuat_Sach_theo_Don_gia(this.value)">
 							<option value="0-900000">Lọc Sách theo Đơn giá Bán</option>
 							<option value="0-200000">Giá dưới 200.000</option>
 							<option value="200000-400000">Giá lớn từ 200.000 đến 400.000</option>
@@ -194,7 +194,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-md-3 col-xs-12 book-mt15">
 						<span>
 							<i class="fa fa-list-alt" aria-hidden="true"></i> Thể loại</span>
-						<select class="btn btn-success" onclick="Xuat_Sach_theo_The_loai(this.value)">
+						<select class="book-select" onclick="Xuat_Sach_theo_The_loai(this.value)">
 							<option value="khoahoc">Khoa học</option>
 							<option value="thethao">Thể thao</option>
 							<option value="thieunhi">Thiếu nhi</option>
@@ -205,7 +205,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-md-3 col-xs-12 book-mt15">
 						<span>
 							<i class="fa fa-user" aria-hidden="true"></i> Tác giả</span>
-						<select class="btn btn-warning" onclick="Xuat_Sach_theo_Tac_gia(this.value)">
+						<select class="book-select" onclick="Xuat_Sach_theo_Tac_gia(this.value)">
 							<option value="ngoctrinh">Ngọc Trinh</option>
 							<option value="kimdung">Kim Dung</option>
 							<option value="nguyenanh">Nguyễn Ánh</option>
@@ -216,7 +216,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-md-3 col-xs-12">
 						<span>
 							<i class="fa fa-address-book" aria-hidden="true"></i> Nhà phát hành</span>
-						<select class="btn btn-danger" onclick="Xuat_Sach_theo_NPH(this.value)">
+						<select class="book-select" onclick="Xuat_Sach_theo_NPH(this.value)">
 							<option value="kimdong">Kim Đồng</option>
 							<option value="nxbtre">Nhà Xuất Bản Trẻ</option>
 							<option value="fahasha">FAHASHA</option>
