--- a/Ung_dung_Quan_ly/Giao_dien/MH_Xoa_The_loai_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Xoa_The_loai_Admin.html
@@ -25,7 +25,7 @@
 
     <div class="container">
         <div class="alert alert-success text-center book-mt10" id="Th_Thong_bao">
-           XOÁ
+           XOÁ THỂ LOẠI
         </div>
     </div>
     <div class="container-fluid">
