--- a/Ung_dung_Quan_ly/MH_Old/MH_Them_Sach.html
+++ b/Ung_dung_Quan_ly/MH_Old/MH_Them_Sach.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="row book-mt10">
-            <button type="button" class="btn btn-success" id="Th_Dong_y">
+            <button type="button" class="btn btn-success" id="Th_Dong_y" type="submit">
                 Đồng ý
             </button>
             <button type="button" class="btn btn-danger" id="Th_Bo_qua">
@@ -33,6 +33,7 @@
     </div>
     <!-- Optional JavaScript -->
     <script src="../Xu_ly/Xu_ly_3L.js"></script>
+    <script src="js/my_validate.js"></script>
     <script>
         var Du_lieu = Doc_Danh_sach_Sach()
         var Danh_sach_Sach = Du_lieu.Danh_sach_Sach
