--- a/Ung_dung_Quan_ly/Giao_dien/MH_Them_Sach_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Them_Sach_Admin.html
@@ -13,17 +13,6 @@
 
 <body>
     <div class="container">
-        <div class="row book-mt10">
-            <button type="button" class="btn btn-success" id="Th_Dong_y">
-                Đồng ý
-            </button>
-            <button type="button" class="btn btn-danger" id="Th_Bo_qua">
-                Bỏ qua
-            </button>
-        </div>
-    </div>
-
-    <div class="container">
         <div class="alert alert-success text-center book-mt10" id="Th_Thong_bao">
             THÊM SÁCH
         </div>
@@ -33,6 +22,7 @@
     </div>
     <!-- Optional JavaScript -->
     <script src="../Xu_ly/Xu_ly_3L.js"></script>
+    <script src="js/my_validate.js"></script>
     <script>
         var Du_lieu = Doc_Danh_sach_Sach()
         var Danh_sach_Sach = Du_lieu.Danh_sach_Sach
@@ -130,6 +120,9 @@
         Th_Bo_qua.onclick = () => {
             window.location = "MH_Danh_sach_Sach_Admin.html"
         }
+
+
+
 
     </script>
 </body>
