--- a/PHONG/Ung_dung_Quan_ly/Giao_dien/MH_Danh_sach_Sach_Admin.html
+++ b/PHONG/Ung_dung_Quan_ly/Giao_dien/MH_Danh_sach_Sach_Admin.html
@@ -59,6 +59,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<div class="container">
 		<div id="Th_Thong_bao"></div>
+		<div id="Th_Phan_trang"></div>
 		<div class="row" id="Th_Cha"></div>
 	</div>
 	</div>
@@ -67,65 +68,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script src="../Xu_ly/Xu_ly_3L.js"></script>
-	<script>
-		var Du_lieu = Doc_Danh_sach_Sach();
-		var Danh_sach_Sach = Du_lieu.Danh_sach_Sach
-		if (Danh_sach_Sach.length > 0) {
-			Danh_sach_Sach.sort((a, b) => a.Ten.localeCompare(b.Ten))
-			Xuat_Danh_Sach_Tong(Danh_sach_Sach, Th_Thong_bao)
-		} else {
-			Th_Thong_bao.innerHTML = "Lỗi đọc dữ liệu"
-		}
+	<script src="js/my_function.js"></script>
 
-		function Xuat_Danh_Sach_Tong(Danh_sach_Sach, Th_thong_bao) {
-			Th_Cha.innerHTML = ""
-			Danh_sach_Sach.forEach(Sach => {
-				var The_hien = Tao_The_hien_Sach(Sach, Th_Cha)
-				The_hien.onclick = () => {
-					The_hien.childNodes[0].classList.toggle("CHON");
-				}
-
-			});
-			Th_Thong_bao.innerHTML =
-				`<h2 class="alert alert-success book-mt10 text-center">Danh sách có tất cả <span style="color:red">${Danh_sach_Sach.length}</span> cuốn sách</h2>`
-		}
-
-		Th_Tim.onclick = () => {
-			var gtTim = Th_Gia_tri_Tim.value;
-			var Danh_sach_Sach_tim = Danh_sach_Sach.filter(x => x.Ten.toLowerCase().includes(gtTim.toLowerCase()));
-			Xuat_Danh_Sach_Tong(Danh_sach_Sach_tim, Th_Thong_bao);
-			Th_Gia_tri_Tim.value = "";
-		}
-
-		function KeyCode(event) {
-			if (event.keyCode == 13) {
-				var gtTim = event.target.value;
-				var Danh_sach_Sach_tim = Danh_sach_Sach.filter(x => x.Ten.toLowerCase().includes(gtTim.toLowerCase()));
-				Xuat_Danh_Sach_Tong(Danh_sach_Sach_tim, Th_Thong_bao);
-			}
-		}
-
-		function Xuat_Sach_theo_Don_gia(chuoi_dieu_kien) {
-			var Thanh_phan_con = chuoi_dieu_kien.split('-')
-			if (Thanh_phan_con.length > 0) {
-
-				var Danh_sach_Sach_theo_Gia = Danh_sach_Sach.filter(x => x.Don_gia_Ban >=
-					Thanh_phan_con[0] &&
-					x.Don_gia_Ban <= Thanh_phan_con[1])
-				Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Gia, Th_Thong_bao)
-			}
-		}
-
-		function Sap_Tang() {
-			Danh_sach_Sach.sort((a, b) => a.Ten.localeCompare(b.Ten))
-			Xuat_Danh_Sach_Tong(Danh_sach_Sach, Th_Thong_bao)
-		}
-
-		function Sap_Giam() {
-			Danh_sach_Sach.sort((a, b) => b.Ten.localeCompare(a.Ten))
-			Xuat_Danh_Sach_Tong(Danh_sach_Sach, Th_Thong_bao)
-		}
-	</script>
 
 </body>
 
