--- a/Ung_dung_Khach_hang/Giao_dien/MH_Gioi_thieu.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Gioi_thieu.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="shortcut icon" href="images/favicon.png" type="image/x-png" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/font-awesome.css" rel="stylesheet">
 </head>
