--- a/Ung_dung_Khach_hang/Giao_dien/MH_Index.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Index.html
@@ -5,7 +5,7 @@
 	<title>TRANG BÁN SÁCH</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="shortcut icon" href="images/up_arrow.png" type="image/x-png" />
+	<link rel="shortcut icon" href="images/favicon.png" type="image/x-png" />
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/my_custom.css" rel="stylesheet" type="text/css" media="all" />
