--- a/Ung_dung_Khach_hang/Giao_dien/MH_Lien_he.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Lien_he.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="shortcut icon" href="images/favicon.png" type="image/x-png" />
 	<link rel="stylesheet" href="css/my_custom.css">
 	<link href="css/font-awesome.css" rel="stylesheet">
 	<!-- //for bootstrap working -->
