--- a/Ung_dung_Khach_hang/Giao_dien/MH_Index.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Index.html
@@ -10,8 +10,8 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/my_custom.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/font-awesome.css" rel="stylesheet">
-	
-	
+
+
 </head>
 
 <body>
@@ -91,24 +91,24 @@
 			</div>
 			<div class="item item2">
 				<div class="container">
-						<div class="carousel-caption">
-								<h3>Sách giảm giá
-									<span>29%</span>
-								</h3>
-								<p>Đặc biệt cho hôm nay</p>
-								<a class="hvr-outline-out button2" href="MH_Lien_he.html">Liên hệ </a>
-							</div>
+					<div class="carousel-caption">
+						<h3>Sách giảm giá
+							<span>29%</span>
+						</h3>
+						<p>Đặc biệt cho hôm nay</p>
+						<a class="hvr-outline-out button2" href="MH_Lien_he.html">Liên hệ </a>
+					</div>
 				</div>
 			</div>
 			<div class="item item3">
 				<div class="container">
-						<div class="carousel-caption">
-								<h3>Sách giảm giá
-									<span>29%</span>
-								</h3>
-								<p>Đặc biệt cho hôm nay</p>
-								<a class="hvr-outline-out button2" href="MH_Lien_he.html">Liên hệ </a>
-							</div>
+					<div class="carousel-caption">
+						<h3>Sách giảm giá
+							<span>29%</span>
+						</h3>
+						<p>Đặc biệt cho hôm nay</p>
+						<a class="hvr-outline-out button2" href="MH_Lien_he.html">Liên hệ </a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -139,8 +139,7 @@
 				</div>
 				<div class="row">
 					<div class="btn">
-						<input placeholder="Bạn muốn tìm sách gì ?" type="text" onkeyup="KeyCode(event)"
-						    style="width:20rem" id="Th_Gia_tri_Tim">
+						<input placeholder="Bạn muốn tìm sách gì ?" type="text" onkeyup="KeyCode(event)" style="width:20rem" id="Th_Gia_tri_Tim">
 						<i class="fa fa-search" id="Th_Tim"></i>
 					</div>
 					<div class="btn">
@@ -204,7 +203,7 @@
 				<div class="row" id="Th_Cha"></div>
 				<div id="Th_Chi_tiet"></div>
 			</div>
-			
+
 		</div>
 	</div>
 	</div>
